--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Y0z64",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.12.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.11.5"
   }
